<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">



        <EditTextPreference
            app:key="signature"
            app:title="@string/privacy_title"
            app:summary="@string/privacy_description"/>


        <EditTextPreference
            app:key="signature"
            app:title="@string/security_title"
            app:summary="@string/security_description"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/design_title"
            app:summary="@string/design_description"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/sounds_title"
            app:summary="@string/sounds_description"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/chat_title"
            app:summary="@string/chat_description"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/storage_title"
            app:summary="@string/storage_description"/>

        <EditTextPreference
            app:key="signature"
            app:title="@string/about_title"/>
</PreferenceScreen>